# Copyright 2010-2021, Google Inc.
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are
# met:
#
#     * Redistributions of source code must retain the above copyright
# notice, this list of conditions and the following disclaimer.
#     * Redistributions in binary form must reproduce the above
# copyright notice, this list of conditions and the following disclaimer
# in the documentation and/or other materials provided with the
# distribution.
#     * Neither the name of Google Inc. nor the names of its
# contributors may be used to endorse or promote products derived from
# this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

load(
    "//:build_defs.bzl",
    "mozc_cc_binary",
    "mozc_cc_library",
    "mozc_cc_test",
    "mozc_py_binary",
    "mozc_select",
)
load("//bazel:run_build_tool.bzl", "mozc_run_build_tool")

package(default_visibility = ["//:__subpackages__"])

mozc_cc_library(
    name = "client_interface",
    hdrs = ["client_interface.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//ipc",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)

mozc_cc_library(
    name = "client",
    srcs = [
        "client.cc",
        "server_launcher.cc",
    ],
    hdrs = [
        "client.h",
    ],
    local_defines = mozc_select(
        linux = ["MOZC_USE_SVS_JAPANESE"],
        oss = ["MOZC_USE_SVS_JAPANESE"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":client_interface",
        "//base:const",
        "//base:file_stream",
        "//base:file_util",
        "//base:process",
        "//base:run_level",
        "//base:singleton",
        "//base:system_util",
        "//base:version",
        "//base:vlog",
        "//base/strings:assign",
        "//composer:key_event_util",
        "//config:config_handler",
        "//ipc",
        "//ipc:named_event",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//session:key_info_util",
        "//testing:friend_test",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ] + mozc_select(
        ios = [
            "//base/mac:mac_process",
            "//base/mac:mac_util",
        ],
        macos = [
            "//base/mac:mac_process",
            "//base/mac:mac_util",
        ],
        windows = [
            "//base/win32:wide_char",
            "//base/win32:win_sandbox",
        ],
    ),
)

mozc_cc_test(
    name = "client_test",
    size = "small",
    srcs = ["client_test.cc"],
    deps = [
        ":client",
        ":client_interface",
        "//base:number_util",
        "//base:version",
        "//base/strings:assign",
        "//composer:key_parser",
        "//config:config_handler",
        "//ipc",
        "//ipc:ipc_mock",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//testing:gunit_main",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings",
    ],
)

mozc_cc_library(
    name = "client_mock",
    testonly = True,
    hdrs = ["client_mock.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":client_interface",
        "//ipc",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//testing:gunit",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)

mozc_cc_binary(
    name = "server_launcher_main",
    srcs = ["server_launcher_main.cc"],
    deps = [
        ":client",
        "//base:init_mozc",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/log",
    ],
)

mozc_cc_binary(
    name = "client_stress_test_main",
    srcs = ["client_stress_test_main.cc"],
    deps = [
        ":client",
        "//base:init_mozc",
        "//base:vlog",
        "//protocol:commands_cc_proto",
        "//protocol:renderer_cc_proto",
        "//renderer:renderer_client",
        "//session:random_keyevents_generator",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/time",
    ],
)

mozc_cc_binary(
    name = "client_scenario_test_main",
    srcs = ["client_scenario_test_main.cc"],
    deps = [
        ":client",
        "//base:file_stream",
        "//base:file_util",
        "//base:init_mozc",
        "//base:system_util",
        "//base:util",
        "//base:vlog",
        "//composer:key_parser",
        "//protocol:commands_cc_proto",
        "//protocol:renderer_cc_proto",
        "//renderer:renderer_client",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)

mozc_cc_binary(
    name = "client_performance_test_main",
    srcs = ["client_performance_test_main.cc"],
    deps = [
        ":client",
        "//base:file_stream",
        "//base:init_mozc",
        "//base:japanese_util",
        "//base:singleton",
        "//base:stopwatch",
        "//base:util",
        "//config:config_handler",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//session:random_keyevents_generator",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:span",
    ],
)

mozc_cc_binary(
    name = "ping_server_main",
    srcs = ["ping_server_main.cc"],
    deps = [
        ":client",
        "//base:init_mozc",
        "@com_google_absl//absl/log",
    ],
)

mozc_py_binary(
    name = "gen_client_quality_test_data",
    srcs = ["gen_client_quality_test_data.py"],
)

mozc_run_build_tool(
    name = "client_quality_test_data",
    outs = {
        "--output": "client_quality_test_data.inc",
    },
    positional_srcs = [
        # TSV files formatted as "label <tab> expected <tab> query"
    ],
    tool = ":gen_client_quality_test_data",
)

mozc_cc_binary(
    name = "client_quality_test_main",
    srcs = [
        "client_quality_test_main.cc",
        ":client_quality_test_data",
    ],
    tags = ["manual"],
    deps = [
        ":client",
        "//base:file_stream",
        "//base:init_mozc",
        "//base:japanese_util",
        "//base:util",
        "//base:vlog",
        "//base/protobuf:message",
        "//evaluation:scorer",
        "//protocol:commands_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)
